--- a/print.html
+++ b/print.html
@@ -3393,54 +3393,51 @@ println!(&quot;{}&quot;, fw.sum(3..8)); // 99
 </span><span class="boring">    }
 </span><span class="boring">}</span></code></pre></pre>
 <h2 id="code-10"><a class="header" href="#code-10">Code</a></h2>
-<pre><code class="language-rust noplayground#[derive(Clone  Debug)]">struct Fenwick&lt;T&gt; {
-    n: usize,
-    data: Vec&lt;T&gt;,
+<pre><code class="language-rust noplayground">struct Fenwick&lt;T&gt; {
+	n: usize,
+	data: Vec&lt;T&gt;,
 }
 
 impl&lt;T: Copy + From&lt;i8&gt; + std::ops::AddAssign + std::ops::Sub&lt;Output = T&gt;&gt; Fenwick&lt;T&gt; {
-    fn new(n: usize) -&gt; Self {
-        Self {
-            n,
-            data: vec![0.into(); n],
-        }
-    }
+	fn new(n: usize) -&gt; Self {
+		Self { n, data: vec![0.into(); n] }
+	}
 
-    fn add(&amp;mut self, idx: usize, val: T) {
-        let mut idx = idx + 1;
-        while idx &lt;= self.n {
-            self.data[idx - 1] += val;
-            idx += idx &amp; (!idx + 1);
-        }
-    }
+	fn add(&amp;mut self, idx: usize, val: T) {
+		let mut idx = idx + 1;
+		while idx &lt;= self.n {
+			self.data[idx - 1] += val;
+			idx += idx &amp; (!idx + 1);
+		}
+	}
 
-    fn get(&amp;self, idx: usize) -&gt; T {
-        self.sum(idx..=idx)
-    }
+	fn get(&amp;self, idx: usize) -&gt; T {
+		self.sum(idx..=idx)
+	}
 
-    fn sum(&amp;self, range: impl std::ops::RangeBounds&lt;usize&gt;) -&gt; T {
-        use std::ops::Bound::*;
-        let l = match range.start_bound() {
-            Included(&amp;v) =&gt; v,
-            Excluded(&amp;v) =&gt; v + 1,
-            Unbounded =&gt; 0,
-        };
-        let r = match range.end_bound() {
-            Included(&amp;v) =&gt; v + 1,
-            Excluded(&amp;v) =&gt; v,
-            Unbounded =&gt; self.n,
-        };
-        self.inner_sum(r) - self.inner_sum(l)
-    }
+	fn sum(&amp;self, range: impl std::ops::RangeBounds&lt;usize&gt;) -&gt; T {
+		use std::ops::Bound::*;
+		let l = match range.start_bound() {
+			Included(&amp;v) =&gt; v,
+			Excluded(&amp;v) =&gt; v + 1,
+			Unbounded =&gt; 0,
+		};
+		let r = match range.end_bound() {
+			Included(&amp;v) =&gt; v + 1,
+			Excluded(&amp;v) =&gt; v,
+			Unbounded =&gt; self.n,
+		};
+		self.inner_sum(r) - self.inner_sum(l)
+	}
 
-    fn inner_sum(&amp;self, mut r: usize) -&gt; T {
-        let mut s: T = 0.into();
-        while r &gt; 0 {
-            s += self.data[r - 1];
-            r -= r &amp; (!r + 1);
-        }
-        s
-    }
+	fn inner_sum(&amp;self, mut r: usize) -&gt; T {
+		let mut s: T = 0.into();
+		while r &gt; 0 {
+			s += self.data[r - 1];
+			r -= r &amp; (!r + 1);
+		}
+		s
+	}
 }</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="lazy-segment-tree"><a class="header" href="#lazy-segment-tree">Lazy Segment Tree</a></h1>
 <p>Reference: AtCoder library <a href="https://atcoder.github.io/ac-library/production/document_en/index.html">https://atcoder.github.io/ac-library/production/document_en/index.html</a></p>
