--- a/algebra/crt.html
+++ b/algebra/crt.html
@@ -151,19 +151,16 @@
 <p><code>crt(r, m)</code> returns <code>Some(x)</code> such that \(x \equiv r_i \pmod {m_i}\) for all \(i\). If such \(x\) does not exist, then it returns <code>None</code>.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
-</span>let r: Vec&lt;i64&gt; = vec![1, 2, 3];
-let m: Vec&lt;i64&gt; = vec![3, 5, 7];
+</span>let r = vec![1, 2, 3];
+let m = vec![3, 5, 7];
 let x = crt(&amp;r, &amp;m);
 println!(&quot;{:?}&quot;, x); // Some(52)
 
-let r: Vec&lt;i64&gt; = vec![2, 5];
-let m: Vec&lt;i64&gt; = vec![10, 25];
+let r = vec![2, 5];
+let m = vec![10, 25];
 let x = crt(&amp;r, &amp;m);
 println!(&quot;{:?}&quot;, x); // None
 <span class="boring">}
-</span><span class="boring">
-</span><span class="boring">// Chinese remainder theorem
-</span><span class="boring">// Reference: PyRival &lt;https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py&gt;
 </span><span class="boring">
 </span><span class="boring">fn gcd(x: i64, y: i64) -&gt; i64 {
 </span><span class="boring">    if y == 0 {
@@ -173,45 +170,34 @@ println!(&quot;{:?}&quot;, x); // None
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
-</span><span class="boring">/// Returns gcd(a, b), s, r s.t. a*s + b*r = gcd(a, b)
-</span><span class="boring">#[inline(always)]
-</span><span class="boring">fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
-</span><span class="boring">    let (mut s, mut old_s) = (0, 1);
-</span><span class="boring">    let (mut r, mut old_r) = (b, a);
-</span><span class="boring">    while r != 0 {
-</span><span class="boring">        let q = old_r / r;
-</span><span class="boring">        let (new_r, new_s) = (old_r - q * r, old_s - q * s);
-</span><span class="boring">        old_r = r; // Not using destructuring to support low version
-</span><span class="boring">        r = new_r; // AtCoder is using 1.42.0
-</span><span class="boring">        old_s = s;
-</span><span class="boring">        s = new_s;
+</span><span class="boring">/// Returns `(g, s, t)` such that `g == gcd(a, b)` and `a*s + t*b == g`.
+</span><span class="boring">fn egcd(mut a: i64, mut b: i64) -&gt; (i64, i64, i64) {
+</span><span class="boring">    let (mut sa, mut ta, mut sb, mut tb) = (1, 0, 0, 1);
+</span><span class="boring">    while b != 0 {
+</span><span class="boring">        let (q, r) = (a / b, a % b);
+</span><span class="boring">        (sa, ta, sb, tb) = (sb, tb, sa - q * sb, ta - q * tb);
+</span><span class="boring">        (a, b) = (b, r);
 </span><span class="boring">    }
-</span><span class="boring">
-</span><span class="boring">    (
-</span><span class="boring">        old_r,
-</span><span class="boring">        old_s,
-</span><span class="boring">        if b != 0 { (old_r - old_s * a) / b } else { 0 },
-</span><span class="boring">    )
+</span><span class="boring">    (a, sa, ta)
 </span><span class="boring">}
 </span><span class="boring">
-</span><span class="boring">/// Returns $x$ s.t. $x=r_i (mod m_i)$ for all $i$
-</span><span class="boring">fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
+</span><span class="boring">/// Returns x s.t. x=a_i (mod m_i) for all i.
+</span><span class="boring">/// Reference: PyRival https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py
+</span><span class="boring">fn crt(a: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
+</span><span class="boring">    use std::iter::zip;
 </span><span class="boring">    let (mut x, mut m_prod) = (0, 1);
-</span><span class="boring">    for (bi, mi) in r.iter().zip(m.iter()) {
-</span><span class="boring">        let (g, s, _) = ext_gcd(m_prod, *mi);
-</span><span class="boring">        if ((bi - x) % mi).rem_euclid(g) != 0 {
+</span><span class="boring">    for (&amp;ai, &amp;mi) in zip(a, m) {
+</span><span class="boring">        let (g, s, _) = egcd(m_prod, mi);
+</span><span class="boring">        if (ai - x).rem_euclid(g) != 0 {
 </span><span class="boring">            return None;
 </span><span class="boring">        }
-</span><span class="boring">        x += m_prod * ((s * ((bi - x).rem_euclid(*mi))).div_euclid(g));
-</span><span class="boring">        m_prod = (m_prod * mi).div_euclid(gcd(m_prod, *mi));
+</span><span class="boring">        x += m_prod * ((s * ((ai - x).rem_euclid(mi))).div_euclid(g));
+</span><span class="boring">        m_prod = (m_prod * mi).div_euclid(gcd(m_prod, mi));
 </span><span class="boring">    }
 </span><span class="boring">    Some(x.rem_euclid(m_prod))
 </span><span class="boring">}</span></code></pre></pre>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><code class="language-rust noplayground">// Chinese remainder theorem
-// Reference: PyRival https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py
-
-fn gcd(x: i64, y: i64) -&gt; i64 {
+<pre><code class="language-rust noplayground">fn gcd(x: i64, y: i64) -&gt; i64 {
     if y == 0 {
         x
     } else {
@@ -219,40 +205,34 @@ fn gcd(x: i64, y: i64) -&gt; i64 {
     }
 }
 
-/// Returns gcd(a, b), s, t s.t. a*s + b*t = gcd(a, b)
-#[inline(always)]
-fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
-    let (mut s, mut old_s) = (0, 1);
-    let (mut r, mut old_r) = (b, a);
-    while r != 0 {
-        let q = old_r / r;
-        let (new_r, new_s) = (old_r - q * r, old_s - q * s);
-        old_r = r; // Not using destructuring to support low version
-        r = new_r; // AtCoder is using 1.42.0
-        old_s = s;
-        s = new_s;
+/// Returns `(g, s, t)` such that `g == gcd(a, b)` and `a*s + t*b == g`.
+fn egcd(mut a: i64, mut b: i64) -&gt; (i64, i64, i64) {
+    let (mut sa, mut ta, mut sb, mut tb) = (1, 0, 0, 1);
+    while b != 0 {
+        let (q, r) = (a / b, a % b);
+        (sa, ta, sb, tb) = (sb, tb, sa - q * sb, ta - q * tb);
+        (a, b) = (b, r);
     }
-
-    (
-        old_r,
-        old_s,
-        if b != 0 { (old_r - old_s * a) / b } else { 0 },
-    )
+    (a, sa, ta)
 }
 
-/// Returns x s.t. x=r_i (mod m_i) for all i
-fn crt(r: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
+/// Returns x s.t. x=a_i (mod m_i) for all i.
+/// Reference: PyRival https://github.com/cheran-senthil/PyRival/blob/master/pyrival/algebra/chinese_remainder.py
+fn crt(a: &amp;[i64], m: &amp;[i64]) -&gt; Option&lt;i64&gt; {
+    use std::iter::zip;
     let (mut x, mut m_prod) = (0, 1);
-    for (bi, mi) in r.iter().zip(m.iter()) {
-        let (g, s, _) = ext_gcd(m_prod, *mi);
-        if ((bi - x) % mi).rem_euclid(g) != 0 {
+    for (&amp;ai, &amp;mi) in zip(a, m) {
+        let (g, s, _) = egcd(m_prod, mi);
+        if (ai - x).rem_euclid(g) != 0 {
             return None;
         }
-        x += m_prod * ((s * ((bi - x).rem_euclid(*mi))).div_euclid(g));
-        m_prod = (m_prod * mi).div_euclid(gcd(m_prod, *mi));
+        x += m_prod * ((s * ((ai - x).rem_euclid(mi))).div_euclid(g));
+        m_prod = (m_prod * mi).div_euclid(gcd(m_prod, mi));
     }
     Some(x.rem_euclid(m_prod))
 }</code></pre>
+<hr />
+<p>Last updated on 231008.</p>
 
                     </main>
 
