--- a/algebra/millerrabin.html
+++ b/algebra/millerrabin.html
@@ -151,163 +151,153 @@
 <p>Deterministic Miller-Rabin primality test determines whether a certain unsigned integer is a prime in a time complexity of \(O(\log{n})\). This test only works for integers under \(2^{64}\).</p>
 <p><code>x.is_prime()</code> chooses a roughly faster algorithm among naive primality test and Miller-Rabin test, and returns <code>true</code> if <code>x</code> is a prime, <code>false</code> if not.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
-<pre><pre class="playground"><code class="language-rust">use miller_rabin::MillerRabin;
+<pre><pre class="playground"><code class="language-rust">use millerrabin::*;
 
-<span class="boring">
-</span><span class="boring">fn main() {
-</span>println!(&quot;{}&quot;, 3284729387909u64.is_prime()); // true
+<span class="boring">fn main() {
+</span>println!(&quot;{}&quot;, 407521u64.is_prime()); // true
+println!(&quot;{}&quot;, 3284729387909u64.is_prime()); // true
 println!(&quot;{}&quot;, 3284729387911u64.is_prime()); // false 53×61976026187
 <span class="boring">}
 </span><span class="boring">
-</span><span class="boring">mod miller_rabin {
-</span><span class="boring">    pub trait MillerRabin: From&lt;u8&gt; + PartialOrd {
-</span><span class="boring">        const MR_THRES: Self;
-</span><span class="boring">        fn naive_primality(self) -&gt; bool;
-</span><span class="boring">        fn miller_rabin_test(self, a: Self) -&gt; bool;
-</span><span class="boring">        fn miller_primality(self) -&gt; bool;
-</span><span class="boring">        fn is_prime(self) -&gt; bool {
-</span><span class="boring">            if self &lt;= 1.into() {
-</span><span class="boring">                false
-</span><span class="boring">            } else if self &lt;= Self::MR_THRES {
-</span><span class="boring">                self.naive_primality()
-</span><span class="boring">            } else {
-</span><span class="boring">                self.miller_primality()
-</span><span class="boring">            }
-</span><span class="boring">        }
+</span><span class="boring">mod millerrabin {
+</span><span class="boring">    pub trait Primality {
+</span><span class="boring">        fn is_prime(self) -&gt; bool;
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    macro_rules! impl_millerrabin {
-</span><span class="boring">        ($t:ty, $u:ty, $thres:expr, $($x:expr),*) =&gt; {
-</span><span class="boring">            impl MillerRabin for $t {
-</span><span class="boring">                const MR_THRES: Self = $thres;
+</span><span class="boring">    macro_rules! impl_primality {
+</span><span class="boring">        ($t:ty, $u:ty, $thres:expr, $bcnt:expr, $($basis:expr),+) =&gt; {
+</span><span class="boring">            impl Primality for $t {
+</span><span class="boring">                fn is_prime(self) -&gt; bool {
+</span><span class="boring">                    if self &lt;= 1 {
+</span><span class="boring">                        return false;
+</span><span class="boring">                    } else if self &amp; 1 == 0 {
+</span><span class="boring">                        return self == 2;
+</span><span class="boring">                    }
 </span><span class="boring">
-</span><span class="boring">                #[inline(always)]
-</span><span class="boring">                fn naive_primality(self) -&gt; bool {
-</span><span class="boring">                    (2..).take_while(|&amp;i| i * i &lt;= self).all(|i| self % i != 0)
-</span><span class="boring">                }
+</span><span class="boring">                    const THRES: $t = $thres;
+</span><span class="boring">                    const TEST: [$t; $bcnt] = [$($basis,)+];
 </span><span class="boring">
-</span><span class="boring">                #[inline(always)]
-</span><span class="boring">                fn miller_rabin_test(self, a: Self) -&gt; bool {
-</span><span class="boring">                    let d = self - 1;
-</span><span class="boring">                    let mut p = d &gt;&gt; (d.trailing_zeros());
+</span><span class="boring">                    if self &lt;= THRES {
+</span><span class="boring">                        for p in (2..).take_while(|&amp;p| p * p &lt;= self) {
+</span><span class="boring">                            if self % p == 0 {
+</span><span class="boring">                                return false;
+</span><span class="boring">                            }
+</span><span class="boring">                        }
+</span><span class="boring">                        return true;
+</span><span class="boring">                    }
 </span><span class="boring">
-</span><span class="boring">                    let mut t = {
-</span><span class="boring">                        let mut base = a as $u;
-</span><span class="boring">                        let mut exp = p as $u;
-</span><span class="boring">                        let rem = self as $u;
-</span><span class="boring">                        let mut ret: $u = 1;
+</span><span class="boring">                    let pow = |base: $t, mut exp: $t| -&gt; $t {
+</span><span class="boring">                        let mut base = base as $u;
+</span><span class="boring">                        let mut ret = 1 as $u;
 </span><span class="boring">                        while exp != 0 {
 </span><span class="boring">                            if exp &amp; 1 != 0 {
-</span><span class="boring">                                ret = ret * base % rem;
+</span><span class="boring">                                ret = (ret * base) % self as $u;
 </span><span class="boring">                            }
-</span><span class="boring">                            base = base * base % rem;
 </span><span class="boring">                            exp &gt;&gt;= 1;
+</span><span class="boring">                            base = (base * base) % self as $u;
 </span><span class="boring">                        }
 </span><span class="boring">                        ret as $t
 </span><span class="boring">                    };
 </span><span class="boring">
-</span><span class="boring">                    let at_last = t == d || t == 1;
+</span><span class="boring">                    let s = (self - 1).trailing_zeros();
+</span><span class="boring">                    let d = (self - 1) &gt;&gt; s;
 </span><span class="boring">
-</span><span class="boring">                    while p != d {
-</span><span class="boring">                        p &lt;&lt;= 1;
-</span><span class="boring">                        t = ((t as $u * t as $u) % self as $u) as $t;
-</span><span class="boring">                        if t == self - 1 {
-</span><span class="boring">                            return true;
+</span><span class="boring">                    for &amp;a in TEST.iter().take_while(|&amp;&amp;a| a &lt; self - 1) {
+</span><span class="boring">                        let mut x = pow(a, d);
+</span><span class="boring">                        for _ in 0..s {
+</span><span class="boring">                            let y = ((x as $u).pow(2) % self as $u) as $t;
+</span><span class="boring">                            if y == 1 &amp;&amp; x != 1 &amp;&amp; x != self - 1 {
+</span><span class="boring">                                return false;
+</span><span class="boring">                            }
+</span><span class="boring">                            x = y;
+</span><span class="boring">                        }
+</span><span class="boring">                        if x != 1 {
+</span><span class="boring">                            return false;
 </span><span class="boring">                        }
 </span><span class="boring">                    }
-</span><span class="boring">                    at_last
-</span><span class="boring">                }
 </span><span class="boring">
-</span><span class="boring">                fn miller_primality(self) -&gt; bool {
-</span><span class="boring">                    $(
-</span><span class="boring">                        if !self.miller_rabin_test($x) { return false; }
-</span><span class="boring">                    )*
 </span><span class="boring">                    true
 </span><span class="boring">                }
 </span><span class="boring">            }
 </span><span class="boring">        };
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    impl_millerrabin!(u8, u16, 254, 2);
-</span><span class="boring">    impl_millerrabin!(u16, u32, 2000, 2, 3);
-</span><span class="boring">    impl_millerrabin!(u32, u64, 7000, 2, 7, 61);
-</span><span class="boring">    impl_millerrabin!(u64, u128, 300000, 2, 325, 9375, 28178, 450775, 9780504, 1795265022);
+</span><span class="boring">    impl_primality!(u8, u16, 255, 1, 2);
+</span><span class="boring">    impl_primality!(u16, u32, 2000, 2, 2, 3);
+</span><span class="boring">    impl_primality!(u32, u64, 7000, 3, 2, 7, 61);
+</span><span class="boring">    impl_primality!(u64, u128, 300000, 7, 2, 325, 9375, 28178, 450775, 9780504, 1795265022);
 </span><span class="boring">}</span></code></pre></pre>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><code class="language-rust noplayground">mod miller_rabin {
-    pub trait MillerRabin: From&lt;u8&gt; + PartialOrd {
-        const MR_THRES: Self;
-        fn naive_primality(self) -&gt; bool;
-        fn miller_rabin_test(self, a: Self) -&gt; bool;
-        fn miller_primality(self) -&gt; bool;
-        fn is_prime(self) -&gt; bool {
-            if self &lt;= 1.into() {
-                false
-            } else if self &lt;= Self::MR_THRES {
-                self.naive_primality()
-            } else {
-                self.miller_primality()
-            }
-        }
+<pre><code class="language-rust noplayground">mod millerrabin {
+    pub trait Primality {
+        fn is_prime(self) -&gt; bool;
     }
 
-    macro_rules! impl_millerrabin {
-        ($t:ty, $u:ty, $thres:expr, $($x:expr),*) =&gt; {
-            impl MillerRabin for $t {
-                const MR_THRES: Self = $thres;
+    macro_rules! impl_primality {
+        ($t:ty, $u:ty, $thres:expr, $bcnt:expr, $($basis:expr),+) =&gt; {
+            impl Primality for $t {
+                fn is_prime(self) -&gt; bool {
+                    if self &lt;= 1 {
+                        return false;
+                    } else if self &amp; 1 == 0 {
+                        return self == 2;
+                    }
 
-                #[inline(always)]
-                fn naive_primality(self) -&gt; bool {
-                    (2..).take_while(|&amp;i| i * i &lt;= self).all(|i| self % i != 0)
-                }
+                    const THRES: $t = $thres;
+                    const TEST: [$t; $bcnt] = [$($basis,)+];
 
-                #[inline(always)]
-                fn miller_rabin_test(self, a: Self) -&gt; bool {
-                    let d = self - 1;
-                    let mut p = d &gt;&gt; (d.trailing_zeros());
+                    if self &lt;= THRES {
+                        for p in (2..).take_while(|&amp;p| p * p &lt;= self) {
+                            if self % p == 0 {
+                                return false;
+                            }
+                        }
+                        return true;
+                    }
 
-                    let mut t = {
-                        let mut base = a as $u;
-                        let mut exp = p as $u;
-                        let rem = self as $u;
-                        let mut ret: $u = 1;
+                    let pow = |base: $t, mut exp: $t| -&gt; $t {
+                        let mut base = base as $u;
+                        let mut ret = 1 as $u;
                         while exp != 0 {
                             if exp &amp; 1 != 0 {
-                                ret = ret * base % rem;
+                                ret = (ret * base) % self as $u;
                             }
-                            base = base * base % rem;
                             exp &gt;&gt;= 1;
+                            base = (base * base) % self as $u;
                         }
                         ret as $t
                     };
 
-                    let at_last = t == d || t == 1;
+                    let s = (self - 1).trailing_zeros();
+                    let d = (self - 1) &gt;&gt; s;
 
-                    while p != d {
-                        p &lt;&lt;= 1;
-                        t = ((t as $u * t as $u) % self as $u) as $t;
-                        if t == self - 1 {
-                            return true;
+                    for &amp;a in TEST.iter().take_while(|&amp;&amp;a| a &lt; self - 1) {
+                        let mut x = pow(a, d);
+                        for _ in 0..s {
+                            let y = ((x as $u).pow(2) % self as $u) as $t;
+                            if y == 1 &amp;&amp; x != 1 &amp;&amp; x != self - 1 {
+                                return false;
+                            }
+                            x = y;
+                        }
+                        if x != 1 {
+                            return false;
                         }
                     }
-                    at_last
-                }
 
-                fn miller_primality(self) -&gt; bool {
-                    $(
-                        if !self.miller_rabin_test($x) { return false; }
-                    )*
                     true
                 }
             }
         };
     }
 
-    impl_millerrabin!(u8, u16, 254, 2);
-    impl_millerrabin!(u16, u32, 2000, 2, 3);
-    impl_millerrabin!(u32, u64, 7000, 2, 7, 61);
-    impl_millerrabin!(u64, u128, 300000, 2, 325, 9375, 28178, 450775, 9780504, 1795265022);
+    impl_primality!(u8, u16, 255, 1, 2);
+    impl_primality!(u16, u32, 2000, 2, 2, 3);
+    impl_primality!(u32, u64, 7000, 3, 2, 7, 61);
+    impl_primality!(u64, u128, 300000, 7, 2, 325, 9375, 28178, 450775, 9780504, 1795265022);
 }</code></pre>
+<hr />
+<p>Last updated on 231008.</p>
 
                     </main>
 
